Gap issue46 (#51)
* Reorder & renamed sidebar sections #46

* Updated regional summary text and added legend description accordion #46

* Created network gap score description accordion #46

* Minor additions; Run Analysis --> Run, add legend title of Transit Gap Priority #46

* Text changes & transit layer toggle

* Municipality popups on hover #46

--- a/src/css/pages/map/map.css
+++ b/src/css/pages/map/map.css
@@ -30,6 +30,13 @@
     margin: -75px 0 0 -75px;
     display: none;
 }
+.map__container .mapboxgl-popup-content {
+    background: #b6ca85;
+}
+
+.map__container .mapboxgl-popup-tip{
+    border-right: 0;
+}
 
 @keyframes spin{
     0% { transform: rotate(0deg); }
